# mar-2023-pyton-drf

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/auth/: urls.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0002_autoparkmodel_user.py
apps/cars/: filters.py  models.py  serializers.py  views.py
apps/cars/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/apps/auth/: views.py
backend/apps/auto_parks/: services.py  views.py
backend/apps/auto_parks/tests/: test_calc.py  test_view.py
backend/apps/cars/: consumer.py  models.py  serializers.py  views.py
backend/apps/chat/: consumers.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/users/: views.py
backend/configs/: routing.py  settings.py  urls.py
backend/core/enums/: regex_enum.py
backend/core/services/: email_service.py
backend/templates/: spam.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py
client/: asset-manifest.json  index.html
client/static/js/: main.077884fe.js  main.077884fe.js.map  main.a87fce89.js  main.a87fce89.js.map
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
core/enums/: regex_enum.py
core/services/: email_service.py  jwt_service.py  upload_avatar.py
frontend/: package-lock.json  package.json
frontend/src/components/: Cars.js  Chat.js
frontend/src/constants/: urls.js
frontend/src/services/: carService.js
(+1 files in other folders)
